# simple-raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc
src/include/: camera.h  camera_base.h  dof_camera.h  onb.h  point_sampler_disk.h  point_sampler_mc.h  point_sampler_sphere.h  quaternion.h  raw_camera.h  ray.h  renderer.h  simple_raytracer.h  value_sampler.h  vector3d.h  vector_utility.h
src/include/materials/: dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material_base.h  materials.h  metal.h
src/include/objects/: aabb.h  box.h  bvh_node.h  constant_medium.h  flip_normals.h  hitable.h  hitable_base.h  hitable_list.h  moving_sphere.h  objects.h  rectangle.h  sphere.h  transform.h
src/include/pdfs/: hitable_pdf.h  lambert_pdf.h  mixture_pdf.h  pdf_base.h  pdfs.h
src/include/textures/: checker_texture.h  constant_texture.h  image_texture.h  perlin_noise.h  perlin_noise_texture.h  texture_base.h  textures.h
src/study/: chapter1.cc  chapter3.cc  chapter4.cc  chapter5-1.cc  chapter5-2.cc  chapter5-3.cc  chapter6.cc  chapter7.cc  chapter8-1.cc  chapter8-2.cc  chapter8-3.cc
src/study/image/: chapter5-2.ppm  chapter6_random.ppm  chapter7_diffuse.ppm  chapter8-1_lambertian.ppm
